[metadata]
name = ICMChat
version = attr: Quartz.__version__
author = clr-cera
url = https://icmchat-4611dcacbe9c.herokuapp.com
description = This is a chat!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = chat
license = MIT License

[options]
package_dir=
    =src
packages = find:

zip_safe = False
install_requires =
    dnspython
    build
    setuptools

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    icmchat = Quartz.client:main
